[gd_scene load_steps=13 format=3 uid="uid://b66c2dbxvn2cs"]

[ext_resource type="PackedScene" uid="uid://cv7bcq53fjfx2" path="res://pin_screen_viewport.tscn" id="1_atd0g"]
[ext_resource type="Script" path="res://door_pin.gd" id="1_e2w0m"]
[ext_resource type="Material" uid="uid://csquk4ou4faw1" path="res://outline.material" id="2_ctblg"]
[ext_resource type="Script" path="res://button.gd" id="2_l4btv"]
[ext_resource type="AudioStream" uid="uid://rqiaekr25i8e" path="res://sounds/computer/error-sound.wav" id="5_m0jqo"]
[ext_resource type="AudioStream" uid="uid://d0dgh85yu31wo" path="res://sounds/button_press.wav" id="6_c8626"]

[sub_resource type="BoxMesh" id="BoxMesh_s4aq5"]
size = Vector3(0.3, 0.5, 0.1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_me1kk"]

[sub_resource type="QuadMesh" id="QuadMesh_avhbi"]
size = Vector2(0.25, 0.105)

[sub_resource type="ViewportTexture" id="ViewportTexture_mvvuo"]

[sub_resource type="ViewportTexture" id="ViewportTexture_fogfa"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_fkqd8"]
resource_local_to_scene = true
albedo_texture = SubResource("ViewportTexture_mvvuo")
emission_enabled = true
emission_texture = SubResource("ViewportTexture_fogfa")

[node name="DoorPin" type="Node3D"]
script = ExtResource("1_e2w0m")

[node name="Box" type="MeshInstance3D" parent="."]
mesh = SubResource("BoxMesh_s4aq5")
surface_material_override/0 = SubResource("StandardMaterial3D_me1kk")

[node name="Screen" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.153642, 0.0508536)
mesh = SubResource("QuadMesh_avhbi")
skeleton = NodePath("../Box")
surface_material_override/0 = SubResource("StandardMaterial3D_fkqd8")

[node name="Buttons" type="Node3D" parent="."]

[node name="1" type="CSGBox3D" parent="Buttons" groups=["Button"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.08, 0.0286818, 0.02)
material_overlay = ExtResource("2_ctblg")
use_collision = true
collision_layer = 2
size = Vector3(0.06, 0.06, 0.1)
script = ExtResource("2_l4btv")
button_char = "1"

[node name="2" type="CSGBox3D" parent="Buttons" groups=["Button"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.000277176, 0.0286818, 0.02)
material_overlay = ExtResource("2_ctblg")
use_collision = true
collision_layer = 2
size = Vector3(0.06, 0.06, 0.1)
script = ExtResource("2_l4btv")
button_char = "2"

[node name="3" type="CSGBox3D" parent="Buttons" groups=["Button"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0805543, 0.0286818, 0.02)
material_overlay = ExtResource("2_ctblg")
use_collision = true
collision_layer = 2
size = Vector3(0.06, 0.06, 0.1)
script = ExtResource("2_l4btv")
button_char = "3"

[node name="4" type="CSGBox3D" parent="Buttons" groups=["Button"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.08, -0.041181, 0.02)
material_overlay = ExtResource("2_ctblg")
use_collision = true
collision_layer = 2
size = Vector3(0.06, 0.06, 0.1)
script = ExtResource("2_l4btv")
button_char = "4"

[node name="5" type="CSGBox3D" parent="Buttons" groups=["Button"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.000277176, -0.041181, 0.02)
material_overlay = ExtResource("2_ctblg")
use_collision = true
collision_layer = 2
size = Vector3(0.06, 0.06, 0.1)
script = ExtResource("2_l4btv")
button_char = "5"

[node name="6" type="CSGBox3D" parent="Buttons" groups=["Button"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0805543, -0.041181, 0.02)
material_overlay = ExtResource("2_ctblg")
use_collision = true
collision_layer = 2
size = Vector3(0.06, 0.06, 0.1)
script = ExtResource("2_l4btv")
button_char = "6"

[node name="7" type="CSGBox3D" parent="Buttons" groups=["Button"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.08, -0.111044, 0.02)
material_overlay = ExtResource("2_ctblg")
use_collision = true
collision_layer = 2
size = Vector3(0.06, 0.06, 0.1)
script = ExtResource("2_l4btv")
button_char = "7"

[node name="8" type="CSGBox3D" parent="Buttons" groups=["Button"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.000277176, -0.111044, 0.02)
material_overlay = ExtResource("2_ctblg")
use_collision = true
collision_layer = 2
size = Vector3(0.06, 0.06, 0.1)
script = ExtResource("2_l4btv")
button_char = "8"

[node name="9" type="CSGBox3D" parent="Buttons" groups=["Button"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0805543, -0.111044, 0.02)
material_overlay = ExtResource("2_ctblg")
use_collision = true
collision_layer = 2
size = Vector3(0.06, 0.06, 0.1)
script = ExtResource("2_l4btv")
button_char = "9"

[node name="0" type="CSGBox3D" parent="Buttons" groups=["Button"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.000277176, -0.180907, 0.02)
material_overlay = ExtResource("2_ctblg")
use_collision = true
collision_layer = 2
size = Vector3(0.06, 0.06, 0.1)
script = ExtResource("2_l4btv")

[node name="PinScreenViewport" parent="." instance=ExtResource("1_atd0g")]

[node name="ErrorSound" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("5_m0jqo")

[node name="ButtonSound" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("6_c8626")

[connection signal="button_pressed" from="Buttons/1" to="." method="_on__button_pressed"]
[connection signal="button_pressed" from="Buttons/2" to="." method="_on__button_pressed"]
[connection signal="button_pressed" from="Buttons/3" to="." method="_on__button_pressed"]
[connection signal="button_pressed" from="Buttons/4" to="." method="_on__button_pressed"]
[connection signal="button_pressed" from="Buttons/5" to="." method="_on__button_pressed"]
[connection signal="button_pressed" from="Buttons/6" to="." method="_on__button_pressed"]
[connection signal="button_pressed" from="Buttons/7" to="." method="_on__button_pressed"]
[connection signal="button_pressed" from="Buttons/8" to="." method="_on__button_pressed"]
[connection signal="button_pressed" from="Buttons/9" to="." method="_on__button_pressed"]
[connection signal="button_pressed" from="Buttons/0" to="." method="_on__button_pressed"]
[connection signal="error" from="PinScreenViewport" to="." method="_on_pin_screen_viewport_error"]
[connection signal="unlock_door" from="PinScreenViewport" to="." method="_on_pin_screen_viewport_unlock_door"]
